--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
+
 <html>
 <head> 
-  <title>Day 1 Notes</title><!--Meta data or notesthat dont display..
---> 
-</head>
-<body><!--all the visible elements on the page-->
-  <h1>More Notes</h1>
+  <title>Day 1 Notes</title><!--Meta data or notesthat dont display..--> 
 
-  <p>Some stuff about what i'm reading and should be absorbing</p>
+<style>
+  body {color: rgb(83,30,161);}
+  h1 {text-align: center;}
+  img {margin: 10px;}
+  body {background: #5954a1;}
+
+</style>
+
+
+</head>
+
+<body><!--all the visible elements on the page-->
+  <h1 style="color:blueviolet">More Notes</h1>
+
+  <h2>Why so serious?</h2>
+
+  <ul>
+    <li>Jerome</li>
+    <li>Heath Ledger</li>
+    <li>Jack Nicholson</li>
+    <li>
+      <img src="https://img.cinemablend.com/cb/c/6/9/f/1/4/c69f14f2d97583c0bc114c92025a6e689cde63a2bdf2cc8fc3c6a97688c984b3.jpg" width="350px"
+    </li>
+  </ul>
+
+
+
+  <p style="text-align: center;">Some stuff about what i'm reading and should be absorbing</p>
+
+  <p style="color: coral;">I started watching Gotham on netflix and it has a really interesting take on Joker's origin, if you knew something about some of the comic book versions, Canon tells us there was 3 seprate Jokers across maybe even 3 decades leading up to Batman year one. Gotham takes liberties on the character it presents us.</p>
+
+  <p>Gotham presents us with the initial inspiration for 3 potential origins of the 3 Jokers which I thought were pretty nifty. the actor who played the character did a really good job of channeling Heath Ledgers Joker from The Dark Knight.</p>
+
+ 
+
+  <script>
+    // Javascript in line... 
+    // Why so serious?
+  
+    // Why so serious??
+    // let's put a smile on that face
+
+    var favoriteJeromeAnswer = prompt('why so serious..?');
+
+    alert('SO!' + favoriteJeromeAnswer + '..??');
+
+    var favoriteJeromeAgainAnswer = prompt('Lets put a smile on that face!'); 
+// console.log('favoriteJeromeAnswer : ' + favoriteJeromeAgainAnswer); 
+  </script>
 
 </body>
 </html>
