--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 </head>
 
+<!--Html comment out-->
+
 <body><!--all the visible elements on the page-->
   <h1 style="color:blueviolet">More Notes</h1>
 
@@ -46,13 +48,16 @@
     // Why so serious??
     // let's put a smile on that face
 
+  function jeromeQ(){
     var favoriteJeromeAnswer = prompt('why so serious..?');
 
     alert('SO!' + favoriteJeromeAnswer + '..??');
 
     var favoriteJeromeAgainAnswer = prompt('Lets put a smile on that face!'); 
-// console.log('favoriteJeromeAnswer : ' + favoriteJeromeAgainAnswer); 
-  </script>
+  console.log('favoriteJeromeAnswer : ' + favoriteJeromeAgainAnswer); 
+}
+
+    </script>
 
 </body>
 </html>
